2024/07/08 폰트 및 색상 수정

--- a/resume.html
+++ b/resume.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume MINJUNG CHOI</title>
-  <!-- Favicons -->
-  <link href="star.png" rel="icon">
-  <link rel="stylesheet" href="css/resume.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume MINJUNG CHOI</title>
+    <!-- Favicons -->
+    <link href="img/star.png" rel="icon">
+    <link rel="stylesheet" href="css/resume.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -27,10 +30,10 @@
     <main>
         <section class="introduce">
             <h2 class="mainTitle">INTRODUCE</h2>
-            <p style="color: #888;">웹/앱 서비스 <span style="font-weight: bolder">백엔드 개발자로서의 다양한 경험</span>이 있습니다. Springboot, Java, MySQL, AWS, Git 등을 사용하여 서비스를 설계, 개발, 운영한 경험으로 언제나 사용자에게 새로운 경험을 제공하고자 고민하고 있습니다.</p>
-            <p style="color: #888;">멋쟁이사자처럼 IT창업동아리에서 3년간 활동했습니다. 10기 아기사자로 시작해, 11기 중앙운영단과 운영진을 거쳐 현재는 12기 학교 대표로 활동 중입니다. 이러한 과정에서 느끼고 배운 경험을 <span style="font-weight: bolder">다른 사람들과 나누고자</span> 커뮤니티와 교육 활동에 열심히 참여했습니다. 교내 학우들뿐만 아니라 타 대학 사람들과도 교류하며 새로운 경험을 쌓을 수 있었습니다.</p>
-            <p style="color: #888;">항상 강한 호기심을 가지고 새로운 것을 배우는 데 열정을 쏟아왔습니다. 특히 웹 서비스를 개발하면서 <span style="font-weight: bolder">사용자의 신뢰도와 만족도를 높이는 것</span>이 얼마나 중요한지 깨닫게 되었습니다. 이를 위해 개인정보와 보안에 대한 기본적인 이해가 필요하다고 생각하여 정보보호학과를 복수전공하게 되었습니다. 이 과정에서 전공 공부에 재미를 느끼며 저만의 방식으로 학습해 좋은 성적을 거두고 있습니다.</p>
-            <p style="color: #888;">대학 입학 이후 꾸준히 다양한 사람들과 만나 소통하며 협업 경험을 쌓아왔습니다. 이 과정에서 상대방에게 나의 의견을 효과적으로 전달하는 능력을 기르고, 의사소통 충돌 시에도 원만하게 해결할 수 있는 역량을 키웠습니다. <span style="font-weight: bolder">많은 협업 경험</span>은 프로젝트를 진행할 때 중요한 자산이 되었고, 팀원들과의 원활한 소통을 통해 프로젝트를 성공적으로 이끌 수 있었습니다.</p>
+            <p style="color: #888;">웹 서비스 <span style="font-weight: bolder; color:rgb(48, 121, 121);">백엔드 개발자로서의 다양한 경험</span>이 있습니다. Springboot, Java, MySQL, AWS, Git 등을 사용하여 서비스를 설계, 개발, 운영한 경험으로 언제나 사용자에게 새로운 경험을 제공하고자 고민하고 있습니다.</p>
+            <p style="color: #888;">멋쟁이사자처럼 IT창업동아리에서 3년간 활동했습니다. 10기 아기사자로 시작해, 11기 중앙운영단과 운영진을 거쳐 현재는 12기 학교 대표로 활동 중입니다. 이러한 과정에서 느끼고 배운 <span style="font-weight: bolder; color:rgb(48, 121, 121);">경험을 다른 사람들과 나누고자</span> 커뮤니티와 교육 활동에 열심히 참여했습니다. 교내 학우들뿐만 아니라 타 대학 사람들과도 교류하며 새로운 경험을 쌓을 수 있었습니다.</p>
+            <p style="color: #888;">항상 <span style="font-weight: bolder; color:rgb(48, 121, 121);">강한 호기심을 가지고 새로운 것을 배우는 데 열정</span>을 쏟아왔습니다. 특히 웹 서비스를 개발하면서 사용자의 신뢰도와 만족도를 높이는 것이 얼마나 중요한지 깨닫게 되었습니다. 이를 위해 개인정보와 보안에 대한 기본적인 이해가 필요하다고 생각하여 정보보호학과를 복수전공하게 되었습니다. 이 과정에서 전공 공부에 재미를 느끼며 저만의 방식으로 학습해 좋은 성적을 거두고 있습니다.</p>
+            <p style="color: #888;">대학 입학 이후 꾸준히 다양한 사람들과 만나 소통하며 협업 경험을 쌓아왔습니다. 이 과정에서 상대방에게 나의 의견을 효과적으로 전달하는 능력을 기르고, 의사소통 충돌 시에도 원만하게 해결할 수 있는 역량을 키웠습니다. <span style="font-weight: bolder; color:rgb(48, 121, 121);">많은 협업 경험</span>은 프로젝트를 진행할 때 중요한 자산이 되었고, 팀원들과의 원활한 소통을 통해 프로젝트를 성공적으로 이끌 수 있었습니다.</p>
           </section>
           <section class="skill">
             <h2 class="mainTitle">Skills</h2>
