--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
             <hr>
             <div class="skill-header">
                 <div class="top">
-                    Fameworks
+                    Frameworks
                 </div>
             </div>
             <ul class="bottom">
