새로운 프로젝트 추가

--- a/resume.html
+++ b/resume.html
@@ -34,50 +34,38 @@
             <p style="color: #888;">멋쟁이사자처럼 IT창업동아리에서 3년간 활동했습니다. 10기 아기사자로 시작해, 11기 중앙운영단과 운영진을 거쳐 현재는 12기 학교 대표로 활동 중입니다. 이러한 과정에서 느끼고 배운 <span style="font-weight: bolder; color:rgb(48, 121, 121);">경험을 다른 사람들과 나누고자</span> 커뮤니티와 교육 활동에 열심히 참여했습니다. 교내 학우들뿐만 아니라 타 대학 사람들과도 교류하며 새로운 경험을 쌓을 수 있었습니다.</p>
             <p style="color: #888;">항상 <span style="font-weight: bolder; color:rgb(48, 121, 121);">강한 호기심을 가지고 새로운 것을 배우는 데 열정</span>을 쏟아왔습니다. 특히 웹 서비스를 개발하면서 사용자의 신뢰도와 만족도를 높이는 것이 얼마나 중요한지 깨닫게 되었습니다. 이를 위해 개인정보와 보안에 대한 기본적인 이해가 필요하다고 생각하여 정보보호학과를 복수전공하게 되었습니다. 이 과정에서 전공 공부에 재미를 느끼며 저만의 방식으로 학습해 좋은 성적을 거두고 있습니다.</p>
             <p style="color: #888;">대학 입학 이후 꾸준히 다양한 사람들과 만나 소통하며 협업 경험을 쌓아왔습니다. 이 과정에서 상대방에게 나의 의견을 효과적으로 전달하는 능력을 기르고, 의사소통 충돌 시에도 원만하게 해결할 수 있는 역량을 키웠습니다. <span style="font-weight: bolder; color:rgb(48, 121, 121);">많은 협업 경험</span>은 프로젝트를 진행할 때 중요한 자산이 되었고, 팀원들과의 원활한 소통을 통해 프로젝트를 성공적으로 이끌 수 있었습니다.</p>
-          </section>
-          <section class="skill">
-            <h2 class="mainTitle">Skills</h2>
-            <div class="skill-header">
-                <div class="top">
-                    Languages
-                </div>
-            </div>
-            <ul class="bottom">
-                <li>Java</li>
-                <li>Python</li>
-            </ul>
-            <hr>
-            <div class="skill-header">
-                <div class="top">
-                    Frameworks
-                </div>
-            </div>
-            <ul class="bottom">
-                <li>Spring Boot</li>
-                <li>Django REST framework</li>
-            </ul>
-            <hr>
-            <div class="skill-header">
-                <div class="top">
-                    ETC
-                </div>
-            </div>
-            <ul class="bottom">
-                <li>SQL</li>
-                <li>MySQL</li>
-                <li>AWS</li>
-                <li>Git & GitHub</li>
-            </ul>
         </section>
         <section class="project">
             <h2 class="mainTitle">PROJECT</h2>
+
             <div class="project-header">
                 <div class="date-range">
                     2024. 07 ~ 2024. 08
                 </div>
                 <div class="content">
                     <div class="title">
-                        카카오맵 API 기반 타임캡슐 서비스 백엔드 개발
+                        밈 번역기 / mz 용어 번역 서비스 백엔드, 서버 개발
+                    </div>
+                    <div class="sub">
+                        멋쟁이사자처럼11th 중앙해커톤: 모지
+                    </div>
+                </div>
+            </div>
+            <ul class="des">
+              <li>생성형 AI를 사용하여 밈, MZ 용어를 번역해주는 서비스 구현</li>
+              <li>Springboot, MySQL, RDS를 사용하여 백엔드 개발 및 DB 설계</li>
+              <li>AWS EC2, RDS, Travis CI, CodeDeploy, S3, IAM 를 이용한 서버 배포 및 CICD 구현, 아키텍쳐 설계</li>
+              <li>프론트엔드 개발자, 디자이너와 협업하여 기획 및 API 명세서 작성</li>
+            </ul>
+            <hr>
+
+            <div class="project-header">
+                <div class="date-range">
+                    2024. 07 ~ 2024. 08
+                </div>
+                <div class="content">
+                    <div class="title">
+                        네이버 지도 API 기반 타임캡슐 서비스 백엔드 개발
                     </div>
                     <div class="sub">
                         Programming GURU2 SERVER
@@ -86,7 +74,8 @@
             </div>
             <ul class="des">
               <li>사용자가 특정 위치에 텍스트, 이미지 데이터를 저장하고, 설정된 날짜에 열람할 수 있도록 기능 구현</li>
-              <li>Springboot, MySQL를 사용하여 백엔드 개발 및 DB 설계</li>
+              <li>Springboot, MySQL, RDS를 사용하여 백엔드 개발 및 DB 설계</li>
+              <li>AWS S3 파일 서버를 이용하여 이미지 파일 저장</li>
               <li>카카오로그인 API를 사용한 OAuth2 로그인 구현(사용자 인증 및 권한 관리를 위해 JWT를 사용)</li>
               <li>안드로이드 개발자, 디자이너와 협업하여 기획 및 서비스 로드맵 수립, API 명세서 작성</li>
             </ul>
@@ -119,10 +108,10 @@
                 </div>
                 <div class="content">
                     <div class="title">
-                        서울여자대학교 축제 사이트(SWU-FOREST) 방문자 수, 분실물 게시판, 방명록 서비스 API 개발 및 운영
+                        서울여자대학교 축제 사이트 방문자 수, 분실물 게시판, 방명록 서비스 API 개발 및 운영
                     </div>
                     <div class="sub">
-                        멋쟁이사자처럼 서울여자대학교 12th 운영진 프로젝트
+                        멋쟁이사자처럼 서울여자대학교 12th 운영진 프로젝트: SWU-FOREST
                     </div>
                 </div>
             </div>
@@ -197,68 +186,39 @@
               <li>프론트엔드 개발자와 협업하여 기획, API 명세서 작성</li>
             </ul>
         </section>
-        <section class="edu">
-            <h2 class="mainTitle">EDUCATION</h2>
-            <div class="edu-header">
-                <div class="date-range">
-                    2022. 03 ~ 2026. 02 <br>(졸업예정)
-                </div>
-                <div class="content">
-                    <div class="title">
-                        서울여자대학교
-                    </div>
-                    <div class="sub">
-                        소프트웨어융합학과 / 정보보호학과 복수전공
-                    </div>
+        <section class="skill">
+            <h2 class="mainTitle">Skills</h2>
+            <div class="skill-header">
+                <div class="top">
+                    Languages
                 </div>
             </div>
+            <ul class="bottom">
+                <li>Java</li>
+                <li>Python</li>
+            </ul>
             <hr>
-            <div class="edu-header">
-                <div class="date-range">
-                    2018. 03 ~ 2021. 02
-                </div>
-                <div class="content">
-                    <div class="title">
-                        이화여자대학교사범대학부속이화금란고등학교
-                    </div>
-                    <div class="sub">
-                        자연계 졸업
-                    </div>
+            <div class="skill-header">
+                <div class="top">
+                    Frameworks
                 </div>
             </div>
-            <canvas id="myChart" width="400" height="200"></canvas>
-            <script>
-                const ctx = document.getElementById('myChart').getContext('2d');
-                const myChart = new Chart(ctx, {
-                    type: 'line',
-                    data: {
-                    labels: ['1학년 1학기', '1학년 2학기', '2학년 1학기', '2학년 2학기', '3학년 1학기'],
-                    datasets: [{
-                        label: '학기별 점수',
-                        data: [4.41, 4.5, 4.5, 4.3, 4.28],
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        borderWidth: 2,
-                        pointBackgroundColor: 'rgba(75, 192, 192, 1)',
-                        pointBorderColor: '#fff',
-                        pointRadius: 7,
-                        pointHoverRadius: 10
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: false,
-                            suggestedMin: 4,
-                            suggestedMax: 4.5,
-                            ticks: {
-                                stepSize: 0.1
-                            }
-                        }
-                    }
-                }
-            });
-            </script>
+            <ul class="bottom">
+                <li>Spring Boot</li>
+                <li>Django REST framework</li>
+            </ul>
+            <hr>
+            <div class="skill-header">
+                <div class="top">
+                    ETC
+                </div>
+            </div>
+            <ul class="bottom">
+                <li>SQL</li>
+                <li>MySQL</li>
+                <li>AWS</li>
+                <li>Git & GitHub</li>
+            </ul>
         </section>
 
         <section class="etc">
@@ -334,6 +294,66 @@
                     </div>
                 </div>
             </div>
-            
+        </section>
+
+        <section class="edu">
+            <h2 class="mainTitle">EDUCATION</h2>
+            <div class="edu-header">
+                <div class="date-range">
+                    2022. 03 ~ 2026. 02 <br>(졸업예정)
+                </div>
+                <div class="content">
+                    <div class="title">
+                        서울여자대학교
+                    </div>
+                    <div class="sub">
+                        소프트웨어융합학과 / 정보보호학과 복수전공
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="edu-header">
+                <div class="date-range">
+                    2018. 03 ~ 2021. 02
+                </div>
+                <div class="content">
+                    <div class="title">
+                        이화여자대학교사범대학부속이화금란고등학교
+                    </div>
+                    <div class="sub">
+                        자연계 졸업
+                    </div>
+                </div>
+            </div>
+            <canvas id="myChart" width="400" height="200"></canvas>
+            <script>
+                const ctx = document.getElementById('myChart').getContext('2d');
+                const myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                    labels: ['1학년 1학기', '1학년 2학기', '2학년 1학기', '2학년 2학기', '3학년 1학기'],
+                    datasets: [{
+                        label: '학기별 점수',
+                        data: [4.41, 4.5, 4.5, 4.3, 4.28],
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                        borderWidth: 2,
+                        pointBackgroundColor: 'rgba(75, 192, 192, 1)',
+                        pointBorderColor: '#fff',
+                        pointRadius: 7,
+                        pointHoverRadius: 10
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: false,
+                            suggestedMin: 3.5,
+                            suggestedMax: 4.5
+                        }
+                    }
+                }
+            });
+            </script>
         </section>
       
