자격증 추가

--- a/new_resume.html
+++ b/new_resume.html
@@ -37,8 +37,7 @@
             <section class="certifications">
                 <h2>Certifications</h2>
                 <ul>
-                    <!--<li>SQL Developer (SQLD) - kdata (데이터자격검정) - 2024.09</li>
-                -->
+                    <li>SQL Developer (SQLD) - kdata (데이터자격검정) - 2024.09</li>
                 </ul>
             </section>
         </aside>
